# warzone

./: .gitignore  .mcp.json  Cargo.toml  Makefile  README.md  go.mod  go.sum
.claude/: settings.json
crates/errors/: Cargo.toml
crates/errors/src/: http.rs  kind.rs  lib.rs  pgwire.rs  suggestions.rs
crates/silo/: Cargo.toml
crates/silo/src/: config.rs  error.rs  lib.rs
crates/silo/src/backend/: common.rs  filesystem.rs  mod.rs  parquet_writer.rs  s3.rs
crates/silo/src/destination/: mod.rs  multi.rs  single.rs
crates/silo/src/ingest/: mod.rs  schema.rs
crates/silo/tests/: fanout_memory.rs
dev/: compose.yaml  init.sh  local.yaml  seaweed-s3.json  stack.yaml
dev/scripts/ingestion/: main.go
docs/: development.md
docs/contributing/: abstractions.md
src/: main.rs  silo.rs
src/config/: config.rs  flags.rs  mod.rs
src/parser/: mod.rs
src/querier/: attach.rs  convert.rs  error.rs  intercepter.rs  mod.rs
src/server/: mod.rs
src/server/http/: mod.rs  server.rs
src/server/http/v1/: healthcheck.rs  mod.rs  payload.rs  query.rs
src/server/pgwire/: copy.rs  ddl.rs  error.rs  handlers.rs  mod.rs  results.rs  server.rs
ui/: play.html
