[package]
name = "warzone"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
axum = {version="0.8.9"}
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = {version="1", features=["full"]}
silo = { path = "crates/silo" }
errors = { path = "crates/errors" }
clap = {version="4.6.1", features=["derive"]}
