[package]
name = "silo"
version = "0.1.0"
edition = "2021"

[dependencies]
iceberg = "0.9.1"
iceberg-catalog-rest = "0.9.1"
iceberg-storage-opendal = "0.9.1"
arrow-array = "57.1"
arrow-schema = "57.1"
parquet = "57.1"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
